# academic-paper-discovery

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/: report-template.md
config/: defaults.yaml  venues.yaml
docs/: DEVELOPMENT.md
docs/superpowers/plans/: 2026-07-20-academic-paper-discovery.md  2026-07-20-simplify-report-output.md
docs/superpowers/specs/: 2026-07-20-academic-paper-discovery-design.md  2026-07-20-simplify-report-output-design.md
references/: output-contract.md  ranking-policy.md  source-policy.md
src/academic_paper_discovery/: __init__.py  cache.py  cli.py  deduplication.py  enrichment.py  http.py  impact.py  models.py  pipeline.py  query_plan.py  ranking.py  reporting.py  venues.py
src/academic_paper_discovery/adapters/: __init__.py  arxiv.py  base.py  crossref.py  dblp.py  europe_pmc.py  openalex.py  semantic_scholar.py
src/academic_paper_discovery/data/: impact_metrics.json
tests/: test_adapter_base.py  test_cache.py  test_cli.py  test_deduplication.py  test_end_to_end.py  test_enrichment.py  test_impact.py  test_models.py  test_package.py  test_pipeline.py  test_query_plan.py  test_ranking.py  test_reporting.py  test_skill_files.py  test_venues.py
tests/adapters/: test_arxiv.py  test_crossref.py  test_dblp.py  test_europe_pmc.py  test_optional_sources.py
tests/fixtures/: end_to_end_request.json  live_smoke_request.json
